--- a/Keil/DFU-nRF51.uvprojx
+++ b/Keil/DFU-nRF51.uvprojx
@@ -48,14 +48,14 @@
             <NotGenerated>0</NotGenerated>
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
-          <OutputDirectory>.\_build\</OutputDirectory>
+          <OutputDirectory>.\_build_DFU51\</OutputDirectory>
           <OutputName>bl_nrf51822_xxaa_s130</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>1</CreateHexFile>
           <DebugInformation>1</DebugInformation>
           <BrowseInformation>1</BrowseInformation>
-          <ListingPath>.\_build\</ListingPath>
+          <ListingPath>.\_build_DFU51\</ListingPath>
           <HexFormatSelection>1</HexFormatSelection>
           <Merge32K>0</Merge32K>
           <CreateBatchFile>0</CreateBatchFile>
