fix wdt reset on scheduler

--- a/Makefile.nRF51
+++ b/Makefile.nRF51
@@ -85,7 +85,8 @@ INC_FOLDERS += \
   $(SDK_ROOT)/external/segger_rtt \
   $(SDK_ROOT) \
   $(PROJ_DIR)/EPD \
-  $(PROJ_DIR)/GUI
+  $(PROJ_DIR)/GUI \
+  $(PROJ_DIR)
 
 # Libraries common to all targets
 LIB_FILES += \
