add JD79668 support

--- a/Keil/EPD-nRF51.uvprojx
+++ b/Keil/EPD-nRF51.uvprojx
@@ -424,6 +424,11 @@
               <FileType>1</FileType>
               <FilePath>..\EPD\SSD1619.c</FilePath>
             </File>
+            <File>
+              <FileName>JD79668.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\EPD\JD79668.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1060,6 +1065,11 @@
               <FileName>SSD1619.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\EPD\SSD1619.c</FilePath>
+            </File>
+            <File>
+              <FileName>JD79668.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\EPD\JD79668.c</FilePath>
             </File>
           </Files>
         </Group>
