--- a/Makefile.nRF51
+++ b/Makefile.nRF51
@@ -46,6 +46,7 @@ SRC_FILES += \
   $(PROJ_DIR)/EPD/EPD_service.c \
   $(PROJ_DIR)/EPD/UC8176.c \
   $(PROJ_DIR)/EPD/SSD1619.c \
+  $(PROJ_DIR)/EPD/JD79668.c \
   $(PROJ_DIR)/GUI/GUI.c \
   $(PROJ_DIR)/GUI/Lunar.c \
   $(PROJ_DIR)/GUI/fonts.c \
